[tool.poetry]
name = "git_api_backend"
version = "0.1.0"
description = ""
authors = ["Miguel"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.4"
requests = "^2.28.1"
fastapi = "^0.84.0"
uvicorn = "^0.18.3"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
